--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   },
   "dependencies": {
     "@vueuse/core": "^8.2.0",
+    "@vueuse/head": "^0.7.5",
+    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-prism": "^2.2.3",
+    "vite-plugin-md": "^0.12.4",
     "vue": "^3.2.31",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.19.1",
     "@iconify-json/carbon": "^1.1.2",
+    "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^17.0.23",
     "@unocss/reset": "^0.30.8",
     "@vitejs/plugin-vue": "^2.3.0",
