--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^17.0.23",
     "@unocss/reset": "^0.30.8",
     "@vitejs/plugin-vue": "^2.3.0",
+    "@vitejs/plugin-vue-jsx": "^1.3.9",
     "@vue/test-utils": "^2.0.0-rc.18",
     "eslint": "^8.12.0",
     "jsdom": "^19.0.0",
