--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "vue3-seamless-scroll",
-  "private": true,
+  "name": "@twoke/seamless-scroll",
+  "version": "0.0.1",
   "packageManager": "pnpm@6.32.3",
+  "main": "./lib/vue3-seamless-scroll.js",
+  "module": "./lib/vue3-seamless-scroll.es.js",
+  "types": "./lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3333 --open",
@@ -9,15 +15,6 @@
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest"
-  },
-  "dependencies": {
-    "@vueuse/core": "^8.2.0",
-    "@vueuse/head": "^0.7.5",
-    "markdown-it-link-attributes": "^4.0.0",
-    "markdown-it-prism": "^2.2.3",
-    "vite-plugin-md": "^0.12.4",
-    "vue": "^3.2.31",
-    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.19.1",
@@ -28,16 +25,33 @@
     "@vitejs/plugin-vue": "^2.3.0",
     "@vitejs/plugin-vue-jsx": "^1.3.9",
     "@vue/test-utils": "^2.0.0-rc.18",
+    "@vueuse/core": "^8.2.0",
+    "@vueuse/head": "^0.7.5",
     "eslint": "^8.12.0",
     "jsdom": "^19.0.0",
+    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-prism": "^2.2.3",
     "pnpm": "^6.32.3",
+    "rollup": "^2.70.1",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-vue": "^6.0.0",
     "typescript": "^4.6.3",
     "unocss": "^0.30.8",
     "unplugin-auto-import": "^0.6.8",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.9.0",
+    "vite-plugin-dts": "^1.0.5",
+    "vite-plugin-md": "^0.12.4",
     "vite-plugin-pages": "^0.22.0",
     "vitest": "^0.8.1",
+    "vue": "^3.2.31",
+    "vue-router": "^4.0.14",
     "vue-tsc": "^0.33.9"
   },
   "eslintConfig": {
