chore: update tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,6 @@
     }
   },
   "exclude": ["dist", "node_modules"],
-  "include": ["package", "src"]
+  // "include": ["package", "src"],
+  "include": ["package"]
 }
