--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,5 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
+    "compilerOptions": {
     "module": "ESNext",
     "target": "es2016",
     "lib": ["DOM", "ESNext"],
@@ -14,16 +13,8 @@
     "resolveJsonModule": true,
     "noUnusedLocals": true,
     "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": [
-      "vite/client",
-      "vite-plugin-pages/client"
-    ],
-    "paths": {
-      "~/*": ["src/*"]
-    }
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": ["dist", "node_modules"],
-  "include": ["package", "src"],
-  // "include": ["package"]
+  "include": ["package"],
 }
