--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@twoke/seamless-scroll",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "packageManager": "pnpm@6.32.3",
   "main": "./lib/vue3-seamless-scroll.js",
   "module": "./lib/vue3-seamless-scroll.es.js",
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "vite build",
     "build:lib": "rollup -c rollup.config.js",
+    "build:wtach": "rollup -w -c rollup.config.js",
     "dev": "vite --port 3333 --open",
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit",
